public interface Usuario {

    void mostrarTipo();
    String getNome();
    String getTipo();
}
